--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="supported-color-schemes" content="light dark">
     <meta name="theme-color" content="hsl(220, 20%, 100%)" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="hsl(220, 20%, 10%)" media="(prefers-color-scheme: dark)">
-    
+
     <link rel="stylesheet" href="/pagefind/pagefind-ui.css"><link rel="stylesheet" href="/styles.css">
     <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="TED Vortex">
     <link rel="alternate" href="/feed.json" type="application/json" title="TED Vortex">
@@ -15,10 +15,7 @@
     <link rel="canonical" href="http://localhost/">
     <script src="/js/main.js" type="module"></script>
     
-  <link rel="icon" sizes="48x48" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
-<meta property="og:type" content="website">
+  <meta property="og:type" content="website">
 <meta property="og:site_name" content="TED Vortex">
 <meta property="og:locale" content="en">
 <meta property="og:title" content="Home">
@@ -27,12 +24,18 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@0_vortex">
 <meta name="description" content="AI psychologist by day, samurai tooling in general by night. I'm just here to make sure your machines don't develop a personality disorder.">
-<script type="text/javascript" src="/pagefind/pagefind-ui.js"></script><script type="text/javascript">window.addEventListener('DOMContentLoaded',()=>{new PagefindUI({"element":"#search","showImages":false,"excerptLength":0,"showEmptyFilters":true,"showSubResults":false,"resetStyles":true,"bundlePath":"/pagefind/","baseUrl":"/"});});</script></head>
+<script type="text/javascript" src="/pagefind/pagefind-ui.js"></script><script type="text/javascript">window.addEventListener('DOMContentLoaded',()=>{new PagefindUI({"element":"#search","showImages":false,"excerptLength":0,"showEmptyFilters":true,"showSubResults":false,"resetStyles":true,"bundlePath":"/pagefind/","baseUrl":"/"});});</script><link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+</head>
   <body>
     <nav class="navbar">
       <a href="/" class="navbar-home">
-          <strong>TED Vortex</strong>
+          <img src="/favicon.svg" alt="">
+        <strong>TED Vortex</strong>
       </a>
+
+      <div class="navbar-banner"></div>
 
       <ul class="navbar-links">        <li>
           <a href="/pages/about/">
@@ -42,6 +45,11 @@
         <li>
           <a href="/archive/">
             Archive
+          </a>
+        </li>
+        <li>
+          <a href="/contact/">
+            Contact
           </a>
         </li>
       <li>
@@ -65,6 +73,8 @@
 
     <main class="body-home">
       <header class="page-header">
+  <img class="splash-screen" src="/uploads/splash-ethereal-spaces.png" alt="">
+
   <h1 class="page-title">WE ARE VORTEX</h1>
 
   <div class="search" id="search"></div>
