--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -7,7 +7,7 @@
     <meta name="supported-color-schemes" content="light dark">
     <meta name="theme-color" content="hsl(220, 20%, 100%)" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="hsl(220, 20%, 10%)" media="(prefers-color-scheme: dark)">
-    
+
     <link rel="stylesheet" href="/styles.css">
     <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="TED Vortex">
     <link rel="alternate" href="/feed.json" type="application/json" title="TED Vortex">
@@ -15,10 +15,7 @@
     <link rel="canonical" href="http://localhost/pages/about/">
     <script src="/js/main.js" type="module"></script>
     
-  <link rel="icon" sizes="48x48" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
-<meta property="og:type" content="website">
+  <meta property="og:type" content="website">
 <meta property="og:site_name" content="TED Vortex">
 <meta property="og:locale" content="en">
 <meta property="og:title" content="About me">
@@ -27,12 +24,18 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@0_vortex">
 <meta name="description" content="AI psychologist by day, samurai tooling in general by night. I'm just here to make sure your machines don't develop a personality disorder.">
+<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
 </head>
   <body>
     <nav class="navbar">
       <a href="/" class="navbar-home">
-          <strong>TED Vortex</strong>
+          <img src="/favicon.svg" alt="">
+        <strong>TED Vortex</strong>
       </a>
+
+      <div class="navbar-banner"></div>
 
       <ul class="navbar-links">        <li>
           <a href="/pages/about/" aria-current="page">
@@ -42,6 +45,11 @@
         <li>
           <a href="/archive/">
             Archive
+          </a>
+        </li>
+        <li>
+          <a href="/contact/">
+            Contact
           </a>
         </li>
       <li>
@@ -78,6 +86,7 @@
 <p>Proficient in GitHub Actions, CloudFlare Workers, TypeScript, and React. Skilled with De/Node, Docker, and PostGres. I prioritize efficiency and practicality in my work. No fluff, just results.</p>
 <p>In my day to day activities I employ various philosophical concepts, some of my favourite and most useful being: DRY, KISS, Occam's Razor and Zeno's paradoxes.</p>
 <p>Currently learning LLMs and Decentralized Scaling. 🚧</p>
+<img class="splash-screen max" src="/uploads/portrait-mecha-girl.webp" alt="">
 
   </div>
 </article>
