perf: test maps and adjust minor plugins 458c030d9f00cbb9cec82b872769e3e8f38c7c05

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -24,6 +24,7 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@0_vortex">
 <meta name="description" content="AI psychologist by day, samurai tooling in general by night. I'm just here to make sure your machines don't develop a personality disorder.">
+<script type="application/ld+json">{"@type":"WebSite","url":"http://localhost/about","@context":"https://schema.org"}</script>
 <link rel="icon" sizes="48x48" href="/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
@@ -90,6 +91,7 @@
 
   </div>
 </article>
+
     </main>
 
     <!-- Current page: /pages/about/ -->
