--- a/revolutionizing-digital-solutions/index.html
+++ b/revolutionizing-digital-solutions/index.html
@@ -147,6 +147,11 @@ End-to-end encryption is a minimal overhead which becomes automated when impleme
 
 </article>
 
+<div class="layout-meta">
+  <p>299 words</p>
+  <p>2 min read</p>
+</div>
+
 <nav class="page-pagination pagination">
   <ul>    <li class="pagination-prev">
       <a href="/posts/pine-healthcare-whitepaper/" rel="prev">
