--- a/404.html
+++ b/404.html
@@ -29,15 +29,15 @@
 <link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
 </head>
   <body>
-    <nav class="navbar">
-      <a href="/" class="navbar-home">
+    <nav class="bg-white dark:bg-primary text-current dark:text-white flex flex-wrap mb-4 gap-2 p-2 items-center justify-between">
+      <a href="/" class="navbar-home flex">
           <img src="/favicon.svg" alt="">
         <strong>TED Vortex</strong>
       </a>
 
-      <div class="navbar-banner"></div>
+      <div class="flex flex-auto"></div>
 
-      <ul class="navbar-links">        <li>
+      <ul class="flex flex-wrap p-0 m-0 list-none items-center gap-x-2 font-semibold">        <li>
           <a href="/pages/about/">
             About me
           </a>
