feat: correct excerpts and add more plugins 4c988676beda7fbad2bba3e421f8d5bd22e614e1

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="theme-color" content="hsl(220, 20%, 10%)" media="(prefers-color-scheme: dark)">
 
     <link rel="stylesheet" href="/pagefind/pagefind-ui.css"><link rel="stylesheet" href="/styles.css">
-    <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="TED Vortex">
+    <link rel="alternate" href="/feed.rss" type="application/atom+xml" title="TED Vortex">
     <link rel="alternate" href="/feed.json" type="application/json" title="TED Vortex">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.svg">
     <link rel="canonical" href="http://localhost/">
     <script src="/js/main.js" type="module"></script>
     
@@ -115,8 +115,6 @@
 <p>Solutions should have native performance anywhere and everywhere.
 This simplifies the design process and user experience to a minimum required, keeping our ideas close to the users at all times.</p>
 <p>While our solutions are not IoT centric there is a great benefit for having services flexible across a wide variety of devices.</p>
-<h2>End-to-End Encryption</h2>
-<p>We want to build ASAP solutions, that</p>
     </div>
 
     <a href="/revolutionizing-digital-solutions/" class="inline-block">
@@ -158,7 +156,8 @@ This simplifies the design process and user experience to a minimum required, ke
 
     <div class="post-excerpt body">
       <h2>HL7 FHIR</h2>
-<p>Health Level Seven or HL7 refers to a set of international standards for transfer of clinical and administrative data between software applications used by various healthcare providers. These standards focus on the application layer, which is "layer 7" in the OSI model. The HL7 standards are produced by Health Level Seven International, an international standards organization, and are adopted by other st</p>
+<p>Health Level Seven or HL7 refers to a set of international standards for transfer of clinical and administrative data between software applications used by various healthcare providers. These standards focus on the application layer, which is "layer 7" in the OSI model. The HL7 standards are produced by Health Level Seven International, an international standards organization, and are adopted by other standards issuing bodies such as American National Standards Institute and International Organization for Standardization.</p>
+<p>Hospitals and other healthcare provider organizations typically have many different computer systems used for everything from billing records to patient tracking. All of these systems should communicate with each other (or "interface") when they receive new information, or when they wish to retrieve information, but not all do so.</p>
     </div>
 
     <a href="/posts/pine-healthcare-whitepaper/" class="inline-block">
@@ -199,7 +198,13 @@ This simplifies the design process and user experience to a minimum required, ke
     <div class="post-excerpt body">
       <p>Initial idea is based on the list available at https://github.com/ligurio/Continuous-Integration-services/blob/master/continuous-integration-services-list.md.</p>
 <p>It contains only services that provide a sensible amount of features for open source projects or non-profit organisations. I've also added several tools I used or tested with a minimal up and running configuration.</p>
-<p>To summarise the review factors for this doc</p>
+<p>To summarise the review factors for this document:</p>
+<ul>
+<li>open source tools</li>
+<li>suitable for nodeJS application development</li>
+<li>minimal developer downtime and configuration setback</li>
+<li>fast build times (RAD)</li>
+</ul>
     </div>
 
     <a href="/posts/continuous-integration-and-analysis/" class="inline-block">
