--- a/revolutionizing-digital-solutions/index.html
+++ b/revolutionizing-digital-solutions/index.html
@@ -9,9 +9,9 @@
     <meta name="theme-color" content="hsl(220, 20%, 10%)" media="(prefers-color-scheme: dark)">
 
     <link rel="stylesheet" href="/styles.css">
-    <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="TED Vortex">
+    <link rel="alternate" href="/feed.rss" type="application/atom+xml" title="TED Vortex">
     <link rel="alternate" href="/feed.json" type="application/json" title="TED Vortex">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.svg">
     <link rel="canonical" href="http://localhost/revolutionizing-digital-solutions/">
     <script src="/js/main.js" type="module"></script>
     
@@ -128,6 +128,7 @@
 <p>Solutions should have native performance anywhere and everywhere.
 This simplifies the design process and user experience to a minimum required, keeping our ideas close to the users at all times.</p>
 <p>While our solutions are not IoT centric there is a great benefit for having services flexible across a wide variety of devices.</p>
+<!-- more -->
 <h2 id="end-to-end-encryption" tabindex="-1"><a href="#end-to-end-encryption" class="header-anchor">End-to-End Encryption</a></h2>
 <p>We want to build ASAP solutions, that is software As Secure As Possible.
 End-to-end encryption is a minimal overhead which becomes automated when implemented in every step of our workflow.</p>
@@ -148,7 +149,7 @@ End-to-end encryption is a minimal overhead which becomes automated when impleme
 </article>
 
 <div class="layout-meta">
-  <p>299 words</p>
+  <p>300 words</p>
   <p>2 min read</p>
 </div>
 
